(PC-38185)[PRO] fix: Align top the form fields in collective stocks form.

--- a/pro/src/pages/CollectiveOffer/CollectiveOfferStock/components/OfferEducationalStock/FormStock/FormStock.module.scss
+++ b/pro/src/pages/CollectiveOffer/CollectiveOfferStock/components/OfferEducationalStock/FormStock/FormStock.module.scss
@@ -21,7 +21,7 @@
 
 .layout-row {
   flex-wrap: wrap;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 
 .label-container {
